tests/snapshots/tui_snapshot__tui_footer_with_usage.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Pi (dummy/dummy-model)


  Assistant:

    Usage sample.



  [single-line] Enter to send
    > Type your message... (Enter to send, Alt+Enter for multi-line, Ctrl+C twice to quit)
  >
  >

  Tokens: 120 in / 45 out ($0.0030)  |  Alt+Enter: multi-line  |  /help  |  Ctrl+C: quit
