tests/snapshots/tui_snapshot__tui_initial_state.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Pi (dummy/dummy-model)

  Welcome to Pi! Type a message to begin, or /help for commands.

  [single-line] Enter to send
    > Type your message... (Enter to send, Alt+Enter for multi-line, Ctrl+C twice to quit)
  >
  >

  Tokens: 0 in / 0 out  |  Alt+Enter: multi-line  |  /help  |  Ctrl+C: quit
